# icub-main

./: .travis.yml  CMakeLists.txt  README.md
admin/scripts/: generate-cmake-options.sh
app/skinGui/conf/positions/: left_forearm_V2_forceEst.txt
conf/: iCubVersion.cmake
src/libraries/ctrlLib/include/iCub/ctrl/: filters.h
src/libraries/ctrlLib/src/: filters.cpp
src/libraries/icubmod/canBusAnalogSensor/: CanBusAnalogSensor.cpp  CanBusAnalogSensor.h
src/libraries/skinDynLib/include/iCub/skinDynLib/: common.h  dynContact.h  skinContact.h
src/libraries/skinDynLib/src/: dynContact.cpp  skinContact.cpp
src/libraries/skinDynLib/test/: skinContactTest.cpp
src/modules/skinManager/include/iCub/skinManager/: ContactForceTorqueEstimation.h  compensator.h  skinManager.h
src/modules/skinManager/src/: ContactForceTorqueEstimation.cpp  compensationThread.cpp  compensator.cpp
src/simulators/iCubSimulation/odesdl/: iCub.cpp  iCub.h  iCub_Sim.cpp
src/tools/iCubGui/src/: objectsthread.h
src/tools/strainTest/: CMakeLists.txt  main.cpp
